added customer id and assigned agent id query request params
