# search-service/src/main/resources/static/openapi.yaml
@@ -27,6 +27,8 @@ paths:
         - $ref: '#/components/parameters/SearchStringQuery'
         - $ref: '#/components/parameters/TicketStatusQuery'
         - $ref: '#/components/parameters/TicketPriorityQuery'
+        - $ref: '#/components/parameters/CustomerIdQuery'
+        - $ref: '#/components/parameters/AssignedAgentIdQuery'
         - $ref: '#/components/parameters/SortByQuery'
         - $ref: '#/components/parameters/SortOrderQuery'
         - $ref: '#/components/parameters/PageNumberQuery'
@@ -84,6 +86,18 @@ components:
       in: query
       schema:
         $ref: '#/components/schemas/TicketPriority'
+
+    CustomerIdQuery:
+      name: customerId
+      in: query
+      schema:
+        type: string
+
+    AssignedAgentIdQuery:
+      name: assignedAgentId
+      in: query
+      schema:
+        type: string
 
     SortByQuery:
       name: sortBy
